Fix horizontal scrollbar in wizard-head.

--- a/themes/ae_admin/modules_css/wizard.less
+++ b/themes/ae_admin/modules_css/wizard.less
@@ -94,7 +94,7 @@
     .wizard-head {
         background: @trail_bg;
         padding: 1em 57px 0.5em; /* 30px from .limiter, 20px for overlay */
-        margin:  0em -59px 1em;
+        margin:  0em -50px 1em;
         height: auto;
         clear: both;
         overflow: auto;
